pkg/ibmvpc/examples/out/explain_out/GroupingExternalSG1_all_vpcs_explain_debug.txt
Explaining connectivity from 10.240.10.4 (vsi1-ky[10.240.10.4]) to 161.26.0.0/8 within test-vpc1-ky
===================================================================================================

Allowed connections from vsi1-ky[10.240.10.4] to Public Internet 161.26.0.0/16: protocol: UDP

Path:
	vsi1-ky[10.240.10.4] -> security group sg1-ky -> subnet1-ky -> network ACL acl1-ky -> 
	PublicGateway public-gw-ky -> 
	Public Internet 161.26.0.0/16


Details:
~~~~~~~~
Path enabled by rules:
	Egress:
		security group sg1-ky allows connection with the following allow rules
			index: 2, direction: outbound,  conns: protocol: udp,  dstPorts: 1-65535, remote: 161.26.0.0/16, local: 0.0.0.0/0
		network ACL acl1-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------

No connections are allowed from vsi1-ky[10.240.10.4] to Public Internet 161.0.0.0-161.25.255.255,161.27.0.0-161.255.255.255;
connection blocked by egress

External traffic via PublicGateway: public-gw-ky
Egress: security group sg1-ky blocks connection; network ACL acl1-ky allows connection

Path:
	vsi1-ky[10.240.10.4] -> |


Details:
~~~~~~~~
Path enabled by rules:
	Egress:
		security group sg1-ky blocks connection since there are no relevant allow rules
		network ACL acl1-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------
